fix(AssetCard): Fixed overflowing images

--- a/packages/forma-36-react-components/src/components/Card/AssetCard/AssetCard.css
+++ b/packages/forma-36-react-components/src/components/Card/AssetCard/AssetCard.css
@@ -26,19 +26,15 @@
 
 .AssetCard__asset {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-
-.AssetCard__content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: inherit;
+  position: relative;
+  max-height: inherit;
+  overflow: hidden;
   min-width: calc(1rem * (240 / var(--rem-base)));
-  flex-basis: 100%;
 }
 
 .AssetCard__header__dropdown-button {
